--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Test for signaling, webrtc etc",
   "main": "index.js",
   "scripts": {
-    "babel": "babel ./src/client -d ./web_app/js",
+    "babel": "babel ./src/client -d ./web_app/",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
