--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Test for signaling, webrtc etc",
   "main": "index.js",
   "scripts": {
-    "babel": "babel ./src/client -d ./web_app/",
+    "babel": "build/babel.sh",
+    "minify": "build/minify.sh",
+    "clean": "rm -rf ./build/tmp",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -18,6 +20,7 @@
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
-    "debug": "^3.1.0"
+    "debug": "^3.1.0",
+    "node-minify": "^3.0.1"
   }
 }
