--- a/package.json
+++ b/package.json
@@ -7,20 +7,31 @@
     "babel": "build/babel.sh",
     "minify": "build/minify.sh",
     "clean": "rm -rf ./build/tmp",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "karma start karma.conf.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "node-static": "^0.7.10",
-    "npm": "^6.1.0",
+    "npm": "^6.4.1",
     "socket.io": "^2.1.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
+    "babel-loader": "^8.0.4",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "chai": "^4.2.0",
     "debug": "^3.1.0",
+    "karma": "^3.0.0",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-mocha": "^1.3.0",
+    "karma-mocha-runner": "^1.1.2",
+    "mocha": "^5.2.0",
     "node-minify": "^3.0.1"
   }
 }
