--- a/package.json
+++ b/package.json
@@ -32,7 +32,10 @@
     "karma-chrome-launcher": "^2.2.0",
     "karma-mocha": "^1.3.0",
     "karma-mocha-runner": "^1.1.2",
+    "karma-sinon-chai": "^2.0.2",
     "mocha": "^5.2.0",
-    "node-minify": "^3.0.1"
+    "node-minify": "^3.0.1",
+    "sinon": "^7.1.0",
+    "sinon-chai": "^3.2.0"
   }
 }
