--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "faye": "^1.2.4",
     "npm": "^6.5.0",
     "socket.io": "^2.1.0"
   },
