--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "mocha": "^5.2.0",
     "node-minify": "^3.0.1",
     "sinon": "^7.1.0",
-    "sinon-chai": "^3.2.0"
+    "sinon-chai": "^3.2.0",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10"
   }
 }
